--- a/game/style.css
+++ b/game/style.css
@@ -1,6 +1,9 @@
 body{
     background-color: grey;
     margin: 0;
+    font-family: "VT323", monospace, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 main{
     background-color: white;
@@ -12,6 +15,11 @@ main{
 h1{
     text-align: center;
     margin: 0;
+    color: aqua;
+    text-shadow: 5px 5px #6b2911;
+    font-size: 4rem;
+    background-color: #f2bb74;
+    padding: 1rem;
 }
 #game{
     position: relative;
