--- a/game/style.css
+++ b/game/style.css
@@ -18,12 +18,17 @@ h1{
     color: aqua;
     text-shadow: 5px 5px #6b2911;
     font-size: 4rem;
-    background-color: #f2bb74;
     padding: 1rem;
+}
+#title-div{
+    background-color: #f2bb74;
 }
 h2{
     font-size: 3rem;
     color: #6b2911;
+}
+P{
+    font-size: 1.5rem;
 }
 #game{
     position: relative;
@@ -41,4 +46,5 @@ h2{
 #game-info p,
 #game-info h2{
     text-align: center;
+    margin: 0.5rem;
 }
