--- a/pseudo-3d/style.css
+++ b/pseudo-3d/style.css
@@ -4,6 +4,9 @@ body{
     font-family: "VT323", monospace, Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-style: normal;
+    background-image: url('/reef-background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover
 }
 main{
     background-color: white;
@@ -11,6 +14,22 @@ main{
     width: 1064px;
     margin: auto;
 
+}
+header{
+    background-color: white;
+    width: 1064px;
+    margin: auto;
+
+}
+footer{
+    background-color: white;
+    width: 1064px;
+    margin: auto;
+    height: 4rem;
+}
+footer p{
+    margin: 0px;
+    text-align: center;
 }
 h1{
     text-align: center;
